# verdikta-sdk

./: README.md  pyproject.toml
examples/: discover_bounties.py  monitor_evaluation.py  submit_work.py
tests/: test_client.py
verdikta_sdk/: __init__.py  client.py  exceptions.py  models.py
