[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "verdikta-sdk"
version = "0.1.0"
description = "Python SDK for the Verdikta Bounties API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["requests>=2.25.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "responses>=0.20.0"]

[tool.setuptools.packages.find]
include = ["verdikta_sdk*"]
